temp.branch New styles are applied, title module is added, adaptive margins are disabled, twig 'header issue' was fixed + some minor fixes

--- a/web/themes/custom/subtheme/subtheme.info.yml
+++ b/web/themes/custom/subtheme/subtheme.info.yml
@@ -9,6 +9,11 @@ libraries:
 libraries-override:
   olivero/global-styling: FALSE
 
+  olivero/layout_discovery_section:
+    css:
+      layout:
+        css/layout/layout-discovery-section-layout.css: false;
+
 regions:
   header: 'Header'
   content: 'Content'
