--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.14",
         "drupal/title_field_for_manage_display": "^2.0",
+        "drupal/twig_tweak": "^3.1",
         "drupal/twig_xdebug": "^1.2",
         "enyo/dropzone": "^5.7"
     },
