--- a/config_files/core.entity_view_display.node.article.custom_frontpage_content_img_mid_gt_tiltle.yml
+++ b/config_files/core.entity_view_display.node.article.custom_frontpage_content_img_mid_gt_tiltle.yml
@@ -34,41 +34,29 @@ third_party_settings:
             region: content
             configuration:
               id: 'field_block:node:article:field_main_image'
+              label: 'Main image'
               label_display: '0'
+              provider: layout_builder
               context_mapping:
                 entity: layout_builder.entity
+                view_mode: view_mode
               formatter:
                 type: media_thumbnail
                 label: hidden
                 settings:
                   image_link: content
-                  image_style: medium
+                  image_style: frontpage_top_block_2_3
                 third_party_settings: {  }
             weight: 0
-            additional: {  }
-          94765ebb-ea95-4ddd-8d36-04c1e65fa8ca:
-            uuid: 94765ebb-ea95-4ddd-8d36-04c1e65fa8ca
-            region: content
-            configuration:
-              id: 'field_block:node:article:field_global_tags'
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              formatter:
-                type: entity_reference_label
-                label: hidden
-                settings:
-                  link: true
-                third_party_settings: {  }
-            weight: 1
-            additional: {  }
+            additional:
+              layout_builder_styles_style: ''
         third_party_settings: {  }
       -
         layout_id: layout_onecol
         layout_settings:
           label: Header
           context_mapping: {  }
-          layout_builder_styles_style: custom_exclusive_and_title
+          layout_builder_styles_style: top_block_side_content
         components:
           ef51f4f1-6dcb-4f4e-aca8-0554839cdf1b:
             uuid: ef51f4f1-6dcb-4f4e-aca8-0554839cdf1b
@@ -86,7 +74,7 @@ third_party_settings:
                   format_custom_false: ''
                   format_custom_true: Exclusive
                 third_party_settings: {  }
-            weight: 0
+            weight: 1
             additional: {  }
           b31da7bf-b194-4aaf-b01e-42cd37fc43e6:
             uuid: b31da7bf-b194-4aaf-b01e-42cd37fc43e6
@@ -107,9 +95,25 @@ third_party_settings:
                   linked: 1
                   classes: ''
                 third_party_settings: {  }
-            weight: 1
+            weight: 2
             additional:
               layout_builder_styles_style: ''
+          94765ebb-ea95-4ddd-8d36-04c1e65fa8ca:
+            uuid: 94765ebb-ea95-4ddd-8d36-04c1e65fa8ca
+            region: content
+            configuration:
+              id: 'field_block:node:article:field_global_tags'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: entity_reference_label
+                label: hidden
+                settings:
+                  link: true
+                third_party_settings: {  }
+            weight: 0
+            additional: {  }
         third_party_settings: {  }
 _core:
   default_config_hash: b4RQ-Nfz-gOoG_jjftd_qDIz4lf_-OzlxoLHkRXjfrE
