--- a/config_files/views.view.main_content_frnotpage_first.yml
+++ b/config_files/views.view.main_content_frnotpage_first.yml
@@ -336,6 +336,7 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
+      css_class: frontpage-top-block
       header: {  }
       footer: {  }
       display_extenders: {  }
