--- a/config_files/core.entity_view_display.node.article.custom_frontpage_content_img_med_tiltle_author_date.yml
+++ b/config_files/core.entity_view_display.node.article.custom_frontpage_content_img_med_tiltle_author_date.yml
@@ -36,18 +36,22 @@ third_party_settings:
             region: content
             configuration:
               id: 'field_block:node:article:field_main_image'
+              label: 'Main image'
               label_display: '0'
+              provider: layout_builder
               context_mapping:
                 entity: layout_builder.entity
+                view_mode: view_mode
               formatter:
                 type: media_thumbnail
                 label: hidden
                 settings:
                   image_link: content
-                  image_style: medium
+                  image_style: med_img
                 third_party_settings: {  }
             weight: 0
-            additional: {  }
+            additional:
+              layout_builder_styles_style: ''
         third_party_settings: {  }
       -
         layout_id: layout_onecol
