--- a/config_files/page_manager.page_variant.frontpage_pm-layout_builder-0.yml
+++ b/config_files/page_manager.page_variant.frontpage_pm-layout_builder-0.yml
@@ -41,6 +41,7 @@ variant_settings:
         label: 'Content top'
         context_mapping: {  }
         column_widths: 25-50-25
+        layout_builder_styles_style: fp_content_top
       components:
         f5e2d248-079c-4ae7-88d5-1cf34e7ac726:
           uuid: f5e2d248-079c-4ae7-88d5-1cf34e7ac726
