--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "drupal/core-recommended": "^9.3",
         "drupal/dropzonejs": "^2.6",
         "drupal/fontawesome": "^2.23",
+        "drupal/layout_builder_component_attributes": "^2.0",
         "drupal/layout_builder_styles": "^1.0@beta",
         "drupal/media_bulk_upload": "^3.0",
         "drupal/page_manager": "^4.0@beta",
