4780 Added a bunch of files

--- a/web/themes/custom/subtheme/subtheme.libraries.yml
+++ b/web/themes/custom/subtheme/subtheme.libraries.yml
@@ -3,4 +3,5 @@ global-styling:
     theme:
       dist/style.css: {}
   js:
-    js/bundle.js: {}
+    dist/bundle.js: {}
+    js/scroll-to-top.js: {}
