--- a/config_files/page_manager.page_variant.frontpage_pm-layout_builder-0.yml
+++ b/config_files/page_manager.page_variant.frontpage_pm-layout_builder-0.yml
@@ -158,6 +158,7 @@ variant_settings:
       layout_settings:
         label: Celebrity
         context_mapping: {  }
+        layout_builder_styles_style: fp_celebrity
       components:
         7c7c5706-65de-4f81-b9f1-08e10b6cd922:
           uuid: 7c7c5706-65de-4f81-b9f1-08e10b6cd922
@@ -199,6 +200,7 @@ variant_settings:
         label: 'Exclusive content'
         context_mapping: {  }
         column_widths: 33-67
+        layout_builder_styles_style: fp_exclusive_content
       components:
         1d57130e-4b35-408e-b682-9b9f06b9419b:
           uuid: 1d57130e-4b35-408e-b682-9b9f06b9419b
@@ -239,14 +241,15 @@ variant_settings:
           region: second
           configuration:
             id: 'views_block:side_newsblocks_1-block_3'
-            label: Marketing
-            label_display: visible
+            label: ''
+            label_display: '0'
             provider: views
             context_mapping: {  }
-            views_label: Marketing
+            views_label: ''
             items_per_page: none
           weight: 0
-          additional: {  }
+          additional:
+            layout_builder_styles_style: ''
         20852084-ccd0-459f-85a1-9539f178839a:
           uuid: 20852084-ccd0-459f-85a1-9539f178839a
           region: first
