--- a/config_files/views.view.frontpage_content_main_content_blocks.yml
+++ b/config_files/views.view.frontpage_content_main_content_blocks.yml
@@ -335,7 +335,20 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
-      header: {  }
+      header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: text
+          empty: false
+          content:
+            value: '<span class="rectangular-category-title red-background">Breaking</span>'
+            format: full_html
+          tokenize: false
       footer: {  }
       display_extenders: {  }
     cache_metadata:
@@ -612,7 +625,9 @@ display:
         row: false
         filters: true
         filter_groups: true
+        header: false
       display_description: ''
+      header: {  }
       display_extenders: {  }
     cache_metadata:
       max-age: -1
