--- a/config_files/views.view.menupage_popular_.yml
+++ b/config_files/views.view.menupage_popular_.yml
@@ -228,8 +228,8 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: '<strong>Popular</strong>'
-            format: basic_html
+            value: '<span class="rectangular-category-title red-background">Breaking</span>'
+            format: full_html
           tokenize: false
       footer: {  }
       display_extenders: {  }
