--- a/config_files/core.extension.yml
+++ b/config_files/core.extension.yml
@@ -31,6 +31,7 @@ module:
   history: 0
   image: 0
   layout_builder: 0
+  layout_builder_component_attributes: 0
   layout_builder_styles: 0
   layout_discovery: 0
   link: 0
