--- a/config_files/image.style.tall_300x480.yml
+++ b/config_files/image.style.tall_300x480.yml
@@ -3,13 +3,13 @@ langcode: en
 status: true
 dependencies: {  }
 name: tall_300x480
-label: 'Tall 300x480'
+label: Tall
 effects:
   62a0bbfc-3e3b-4e31-bcc8-57e38b9ed594:
     uuid: 62a0bbfc-3e3b-4e31-bcc8-57e38b9ed594
     id: image_scale_and_crop
     weight: 1
     data:
-      width: 300
-      height: 480
+      width: 330
+      height: 400
       anchor: center-center
