--- a/config_files/views.view.frontpage_politics.yml
+++ b/config_files/views.view.frontpage_politics.yml
@@ -588,7 +588,7 @@ display:
           plugin_id: text
           empty: false
           content:
-            value: '<a href="/Politics">View all -></a>'
+            value: '<a href="/node/62">View all -></a>'
             format: full_html
           tokenize: false
       display_extenders: {  }
