--- a/config_files/views.view.side_newsblocks_1.yml
+++ b/config_files/views.view.side_newsblocks_1.yml
@@ -888,7 +888,7 @@ display:
           plugin_id: text
           empty: false
           content:
-            value: '<strong>Marketing</strong>'
+            value: '<span class="rectangular-category-title black-background">Marketing</span>'
             format: full_html
           tokenize: false
       footer: {  }
@@ -1782,8 +1782,10 @@ display:
         filters: false
         filter_groups: false
         header: false
+        footer: false
       display_description: ''
       header: {  }
+      footer: {  }
       display_extenders: {  }
     cache_metadata:
       max-age: -1
