--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 /web/themes/custom/subtheme/dist
 /web/themes/custom/subtheme/node_modules
 /web/themes/custom/trash-sub
+/web/modules/custom/trash-mod
