4796 Fixed xDebug issue, fixed 'covered top site's logo' issue. Paragraph begavior added along with styles to it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,22 +21,25 @@ services:
       SSMTP_MAILHUB: mailhog:1025
       #      SSMTP_MAILHUB: opensmtpd:25
       PHP_SENDMAIL_PATH: '"/usr/bin/dos2unix -u | /usr/sbin/ssmtp -f -t"'
-    #      DB_HOST: $DB_HOST
-    #      DB_PORT: $DB_PORT
-    #      DB_USER: $DB_USER
-    #      DB_PASSWORD: $DB_PASSWORD
-    #      DB_NAME: $DB_NAME
-    #      DB_DRIVER: $DB_DRIVER
-    #      DRUSH_OPTIONS_URI: "http://${PROJECT_BASE_URL}:${PROJECT_PORT}"
-    #      PHP_FPM_USER: wodby
-    #      PHP_FPM_GROUP: wodby
-    #      COLUMNS: 80 # Set 80 columns for docker exec -it.
-    #      # Read instructions at https://wodby.com/docs/stacks/php/local/#xdebug
-    #      PHP_XDEBUG: 1
-    #      PHP_XDEBUG_MODE: debug
-    #      PHP_IDE_CONFIG: serverName=my-ide
-    #      PHP_XDEBUG_IDEKEY: "my-ide"
-    #      PHP_XDEBUG_CLIENT_HOST: 172.17.0.1 # Linux
+      DB_HOST: $DB_HOST
+      DB_PORT: $DB_PORT
+      DB_USER: $DB_USER
+      DB_PASSWORD: $DB_PASSWORD
+      DB_NAME: $DB_NAME
+      DB_DRIVER: $DB_DRIVER
+      DRUSH_OPTIONS_URI: "http://${PROJECT_BASE_URL}:${PROJECT_PORT}"
+      PHP_FPM_USER: wodby
+      PHP_FPM_GROUP: wodby
+      COLUMNS: 80 # Set 80 columns for docker exec -it.
+      # Read instructions at https://wodby.com/docs/stacks/php/local/#xdebug
+      PHP_XDEBUG: 1
+      PHP_XDEBUG_MODE: debug
+      PHP_XDEBUG_START_WITH_REQUEST: "yes"
+      PHP_IDE_CONFIG: serverName=docker
+      PHP_XDEBUG_IDEKEY: "docker"
+      XDEBUG_SESSION: XDEBUG_SESSION=default
+      PHP_XDEBUG_CLIENT_HOST: 172.17.0.1 # Linux
+      PHP_XDEBUG_LOG_LEVEL: 0
     #      PHP_XDEBUG_CLIENT_HOST: host.docker.internal # Docker 18.03+ Mac/Win
     #      PHP_XDEBUG_CLIENT_HOST: 10.0.75.1 # Windows, Docker < 18.03
     #      PHP_XDEBUG_LOG: /tmp/php-xdebug.log
@@ -45,7 +48,7 @@ services:
     #      SIMPLETEST_DB: "${DB_DRIVER}://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}#tests_"
     #      MINK_DRIVER_ARGS_WEBDRIVER: '["chrome", {"browserName":"chrome","goog:chromeOptions":{"args":["--disable-gpu","--headless"]}}, "http://chrome:9515"]'
     volumes:
-      - ./:/var/www/html:cached
+      - ./:/var/www/html
   ## Alternative for macOS users: Mutagen https://wodby.com/docs/stacks/drupal/local#docker-for-mac
   #    - drupal:/var/www/html
   ## For XHProf and Xdebug profiler traces
@@ -64,7 +67,7 @@ services:
       NGINX_VHOST_PRESET: $NGINX_VHOST_PRESET
     #      NGINX_DRUPAL_FILE_PROXY_URL: http://example.com
     volumes:
-      - ./:/var/www/html:cached
+      - ./:/var/www/html
     ## Alternative for macOS users: Mutagen https://wodby.com/docs/stacks/drupal/local#docker-for-mac
     #    - drupal:/var/www/html
     labels:
